--- a/style.css
+++ b/style.css
@@ -18,8 +18,17 @@ body {
   height: 200px;
   background-blend-mode: normal;
 }
+
 .card {
   border: 0 !important;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.6);
+}
+
+
+.card-tittle{
+  min-height:2.5rem;
+}
+
+.card-text{
+  
 }
