🍝✨ Checkpoint ./style.css:31664997/147 ./index.html:31664997/545

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   margin: 0em;
   font-family: "Itim", cursive;
+  font-family: 'Poiret One', cursive;
 }
 
 .cover {
@@ -26,9 +27,9 @@ body {
 
 
 .card-tittle{
-  min-height:2.5rem;
+  min-height:3rem;
 }
 
 .card-text{
-  
+  min-height:10rem;
 }
