🎇🐣 Checkpoint ./index.html:31664997/822 ./style.css:31664997/144

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0em;
   font-family: "Itim", cursive;
-  font-family: 'Poiret One', cursive;
+  font-family: 'Kurale', serif;
 }
 
 .cover {
