🚞⛰ Checkpoint ./index.html:31664997/227 ./style.css:31664997/121

--- a/style.css
+++ b/style.css
@@ -33,3 +33,13 @@ body {
 .card-text{
   min-height:10rem;
 }
+
+.stripe-container{
+  display:flex;
+}
+
+.stripe-container .card{
+  width:300px;
+  flex-shrink:0;
+  margin-right:1rem;
+}
