🏞📈 Checkpoint ./style.css:31664997/97 ./index.html:31664997/551

--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
   min-height:10rem;
 }
 
+.product-stripe{
+  overflow-x:scroll;
+  padding-top:1rem;
+  padding-btton:1rem;
+}
+
 .stripe-container{
   display:flex;
 }
