--- a/style.css
+++ b/style.css
@@ -49,3 +49,15 @@ body {
   flex-shrink:0;
   margin-right:1rem;
 }
+
+.responsive-iframe{
+  position:relative;
+  padding-top:56.25%;
+}
+.responsive-iframe iframe{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
