--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   left:0;
   width:100%;
   height:100%;
-}
+}:
 
 .slider{
   overflow-x:hidden;
@@ -68,6 +68,7 @@ body {
 
 .slider-container{
   transform:translateX(0);
+  animation
 }
 
 .image-container{
@@ -76,4 +77,13 @@ body {
   background-size:cover;
   background-position:center;
   flex-shrink:0;
+}
+
+@keyframes slider{
+  0%{
+    transform:translateX(0);
+  }
+  100%{
+    transform:translateX(-100%);
+  }
 }
