--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   left:0;
   width:100%;
   height:100%;
-}:
+}
 
 .slider{
   overflow-x:hidden;
@@ -68,7 +68,7 @@ body {
 
 .slider-container{
   transform:translateX(0);
-  animation
+  animation:slider 20s infinite;
 }
 
 .image-container{
@@ -83,7 +83,35 @@ body {
   0%{
     transform:translateX(0);
   }
-  100%{
+  20%{
+     transform:translateX(0);
+  }
+  
+  25%{
     transform:translateX(-100%);
+  }
+  
+  45%{
+    transform:translateX(-100%);
+  }
+  
+  50%{
+    transform:translateX(-200%);
+  }
+  
+  70%{
+    transform:translateX(-200%);
+  }
+  
+  75%{
+    transform:translateX(-300%);
+  }
+  
+  95%{
+    transform:translateX(-300%);
+  }
+  
+  100%{
+    transform:translateX(0);
   }
 }
