--- a/style.css
+++ b/style.css
@@ -79,6 +79,13 @@ body {
   flex-shrink:0;
 }
 
+.avatar{
+  width:12px;
+  height:120px;
+  background-size:cover;
+  background-position:center;
+}
+
 @keyframes slider{
   0%{
     transform:translateX(0);
