🏛🛰 Checkpoint ./acercade.html:31664997/683 ./.glitch-assets:31664997/1164 ./style.css:31664997/60

--- a/style.css
+++ b/style.css
@@ -80,10 +80,11 @@ body {
 }
 
 .avatar{
-  width:12px;
+  width:120px;
   height:120px;
   background-size:cover;
   background-position:center;
+  margin:0 auto;
 }
 
 @keyframes slider{
